feat : multi module architecture, feat : redis module 추가